# DayBreak

./: .env.example  .gitignore  .stylelintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.ladle/: config.mjs
design-system/: CHANGELOG.md  README.md  dependency-map.md
design-system/components/: CheckInDialog.md  DeadlineChip.md  IconButton.md  PriorityBadge.md  ProjectSwitcher.md  QuickInput.md  TaskItem.md
design-system/patterns/: check-in.md  collapsed-capsule.md  daily-report.md  floating-panel.md
design-system/tokens/: colors.md  spacing.md  typography.md
docs/: spec-activity-log-and-date-pickers.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: mcp_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cli_agent/: claude.rs  codex.rs  kiro.rs  mod.rs
src-tauri/src/mcp/: connect.rs  db.rs  mod.rs  server.rs
src/components/: ComingSoon.tsx  ConfirmDialog.tsx  DatePicker.tsx  ErrorBoundary.tsx  NewTaskModal.tsx  Sidebar.tsx  Toaster.tsx  TopBar.tsx
src/design-system/: index.ts  tokens.ts
src/design-system/components/: CheckInDialog.tsx  CoreComponents.stories.tsx  DeadlineChip.tsx  IconButton.tsx  PriorityBadge.tsx  ProjectSwitcher.tsx  QuickInput.tsx  ReportSection.tsx  TaskItem.stories.tsx  TaskItem.tsx  icons.tsx  index.ts
src/design-system/patterns/: CollapsedCapsule.tsx  DailyReport.tsx  FloatingPanel.tsx  Patterns.stories.tsx  index.ts
src/design-system/tests/: CheckInDialog.test.tsx  ProjectSwitcher.test.tsx  (+3 more)
src/lib/: activityStore.ts  calendar.test.ts  calendar.ts  chatStore.ts  chatTools.ts  dataIO.ts  db.ts  goalsStore.ts  i18n.ts  reminder.test.ts  reminder.ts  settings.ts  store.ts  syncBus.ts  theme.ts  toast.ts  utils.ts
src/pages/: BriefingPage.tsx  CalendarPage.tsx  ChatPage.tsx  FloatingApp.tsx  ReflectPage.tsx  SettingsPage.tsx  TelosPage.tsx  TodosPage.tsx
src/styles/: index.css  tokens.css
(+7 files in other folders)
