[package]
name = "daybreak"
version = "0.1.0"
description = "Daybreak — AI-powered personal daily briefing and planner"
authors = ["apple"]
edition = "2021"

[lib]
name = "daybreak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
# 防双开:第二次启动时把焦点切回已有窗口,避免两个进程同时写 SQLite 触发 BUSY
tauri-plugin-single-instance = { version = "2", features = [] }
# 间歇式时间日志的提醒走系统通知
tauri-plugin-notification = "2"

# === 内嵌 MCP server（对外暴露 Claude Code / 其他 MCP 客户端访问 Daybreak 数据）===
# rmcp: 官方 Rust MCP SDK；axum: HTTP 层。两者跑在 Tauri 进程内的 tokio 后台任务里。
rmcp = { version = "0.8", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "process", "io-util"] }
# 关键决策：MCP server 复用与 tauri-plugin-sql 相同的 sqlx（而非 rusqlite），
# 避免两个 SQLite native 库（libsqlite3-sys）重复链接冲突；async 也契合 MCP 工具的 async handler。
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
# 生成接入密钥（token）用
rand = "0.8"
# 写操作的时间戳（created_at/updated_at，ISO 格式与前端 toISOString 对齐）和 id 生成
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
